--- a/organizacoes/templates/organizacoes/todos_parceiros.html
+++ b/organizacoes/templates/organizacoes/todos_parceiros.html
@@ -24,7 +24,7 @@
     {% include "tabelas_top.html" with tabela="Parceiros" cabecalhos=cabecalhos %}
       {% for parceiro in parceiros %} 
         <tr class="item" {% if not parceiro.user.is_active %} style="color: lightgrey;" {% endif %}>
-          <th scope="row">
+          <th scope="row" data-sort="{{parceiro.user.get_full_name}}">
             <a href="{% url 'parceiro_detail' parceiro.id %}"
               {% if not parceiro.user.is_active %} style="color: LightBlue;" {% endif %}>
               {{parceiro.user.get_full_name}} 
