--- a/professores/templates/professores/orientadores_tabela.html
+++ b/professores/templates/professores/orientadores_tabela.html
@@ -29,7 +29,7 @@
           {% for professor, grupos in orientacoes %} 
 
             <tr class="item">
-              <td>
+              <td data-sort="{{professor.user.get_full_name}}">
                 <a class="imprimir" href="{% url 'professor_detail' professor.id %}">{{professor.user.get_full_name}}</a> <a href="mailto:{{professor.user.email}}">&lt;{{professor.user.email}}&gt;</a>
               </td>
               <td style="text-align: center;"> 
