--- a/estudantes/templates/estudantes/relato_quinzenal.html
+++ b/estudantes/templates/estudantes/relato_quinzenal.html
@@ -28,7 +28,7 @@ textarea {
     {% if prazo %}
       {{prazo.endDate}}
     {% else %}
-      Não há mais datas para relatos.
+      Não há datas para fazer relatos.
     {% endif %}
     </b>
     <br><br>
