incluindo área acadêmica na barra principal

--- a/templates/base.html
+++ b/templates/base.html
@@ -51,6 +51,7 @@
     
         {% if perms.users.altera_professor %}
           <a href="{% url 'index_professor'%}">Área do Professor</a>
+          <a href="{% url 'index_academica' %}">Área Acadêmica</a>
           <a href="{% url 'index_operacional'%}">Área Operacional</a>
           <a href="{% url 'index_administracao'%}">Área Administrativa</a>
 
