--- a/templates/403.html
+++ b/templates/403.html
@@ -45,6 +45,10 @@
             font-size: 1.8rem;
         }
 
+        #app .contato {
+            font-size: 0.8rem;
+        }
+
         @keyframes blink {
             0% {
                 opacity: 0;
@@ -74,7 +78,14 @@
 <body>
     <div id="app">
         <div>403</div>
-        <div class="txt"> Forbidden<span class="blink">_</span> </div>
+        <div class="txt">
+            Forbidden<span class="blink">_</span>
+        </div>
+        <br>
+        <div class="contato">
+            se acredita haver um problema no acesso, notificar:
+            <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>
+        </div>
     </div>
 </body>
 
