--- a/projetos/templates/projetos/evolucao_notas.html
+++ b/projetos/templates/projetos/evolucao_notas.html
@@ -90,7 +90,7 @@
                                         {{nota|stringformat:".2f"|unlocalize}},
                                     {% endfor %}
                                 ],
-                                label: "{{media.curso2.sigla}}",
+                                label: "{{media.curso2.sigla_curta}}",
                                 borderColor: "{{media.cor}}",
                                 fill: false,
                                 spanGaps: true,
@@ -132,7 +132,7 @@
                                         {{nota|stringformat:".2f"|unlocalize}},
                                     {% endfor %}
                                 ],
-                                label: "{{media.curso2.sigla}}",
+                                label: "{{media.curso2.sigla_curta}}",
                                 borderColor: "{{media.cor}}",
                                 fill: false,
                                 spanGaps: true,
