--- a/propostas/templates/propostas/mapeamento_estudante_projeto.html
+++ b/propostas/templates/propostas/mapeamento_estudante_projeto.html
@@ -138,7 +138,7 @@
               </td>
               <td style="text-align:center">
                 <a href="{% url 'estudante_detail' estudante.id %}">
-                  {{estudante.curso2.sigla}}
+                  {{estudante.curso2.sigla_curta}}
                 </a>
               </td>
               <td style="text-align:left;border-right: 2px solid black;">
