--- a/templates/edicoes_ajax.html
+++ b/templates/edicoes_ajax.html
@@ -92,10 +92,10 @@
  
           },
           error: function (request, status, error) {
-            {% if user.tipo_de_usuario == 4 %} 
+            {% if user.tipo_de_usuario == 4 and debug %} 
               alert(request.responseText);
               jQuery("body").html(request.responseText.replace(/\n/g,"<br>"));
-              console.log('error'+request.responseText);
+              console.log('error in ajax: '+request.responseText);
             {% else %}
               jQuery("body").html("Erro no servidor do PFE. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
             {% endif %}
