escondendo números absolutos de genero

--- a/users/templates/users/estudantes_lista.html
+++ b/users/templates/users/estudantes_lista.html
@@ -11,7 +11,8 @@
   {% load dictionary %}
 
   <script src="{% static 'js/Chart.min.js' %}"></script>
-  <script src="{% static 'js/chartjs-plugin-datalabels.js' %}"></script>
+  
+  {% comment %} <script src="{% static 'js/chartjs-plugin-datalabels.js' %}"></script> {% endcomment %}
 
   {% include "tabelas_includes.html" %}
 
