--- a/calendario/templates/calendario/calendario.html
+++ b/calendario/templates/calendario/calendario.html
@@ -109,7 +109,7 @@
 
     tab_aulas {
       border-collapse: separate;
-      border-spacing: 8px 1px;
+      border-spacing: 10px 1px;
       margin-left: -8px;
       margin-right: -8px;
     }
@@ -442,7 +442,7 @@
                       <div class="form-group row">
                           <label for="event-location" class="col-sm-4 control-label">Local</label>
                           <div class="col-sm-8">
-                              <input id="event-location" name="event-location" type="text" class="form-control">
+                              <input id="event-location" name="event-location" type="text" class="form-control" maxlength="{{loc_length}}">
                           </div>
                       </div>
                       <div class="form-group row">
@@ -455,7 +455,7 @@
                       <div class="form-group row">
                           <label for="event-observation" class="col-sm-4 control-label">Obs:</label>
                           <div class="col-sm-8">
-                              <input id="event-observation" name="event-observation" type="text" class="form-control">
+                              <input id="event-observation" name="event-observation" type="text" class="form-control" maxlength="{{obs_length}}">
                           </div>
                       </div>
                       <div class="form-group row">
