--- a/projetos/templates/projetos/projeto_completo.html
+++ b/projetos/templates/projetos/projeto_completo.html
@@ -202,7 +202,7 @@
               <a href="mailto:{{conexao.parceiro.user.email}}"> &lt;{{conexao.parceiro.user.email}}&gt;</a><br>
             </td>
             <td  style="border: 0px; padding-left: 12px;">
-              {% if conexao.gestor_responsavel %}[gestor responsavel]{% endif %}
+              {% if conexao.gestor_responsavel %}[gestor responsável]{% endif %}
               {% if conexao.mentor_tecnico %}[mentoria técnica]{% endif %}
               {% if conexao.recursos_humanos %}[recursos humanos]{% endif %}
               {% if conexao.colaboracao %}[colaboração]{% endif %}
@@ -220,7 +220,7 @@
               <a href="mailto:{{conexao.parceiro.user.email}}" style="color: LightBlue;"> &lt;{{conexao.parceiro.user.email}}&gt;</a><br>
               </td>
               <td  style="color: lightgrey; border: 0px; padding-left: 12px;">
-                {% if conexao.gestor_responsavel %}[gestor responsavel]{% endif %}
+                {% if conexao.gestor_responsavel %}[gestor responsável]{% endif %}
                 {% if conexao.mentor_tecnico %}[mentoria técnica]{% endif %}
                 {% if conexao.recursos_humanos %}[recursos humanos]{% endif %}
                 {% if conexao.colaboracao %}[colaboração]{% endif %}
