--- a/propostas/templates/propostas/procura_grupos.html
+++ b/propostas/templates/propostas/procura_grupos.html
@@ -270,7 +270,7 @@
               {{ conexao.parceiro.user.get_full_name }}
               <span class="papeis">
                 {% if conexao.gestor_responsavel %}
-                  [gestor responsavel]
+                  [gestor responsável]
                 {% endif %}
                 {% if conexao.mentor_tecnico %}
                   [mentoria técnica]
@@ -292,7 +292,7 @@
               {{ conexao.parceiro.user.get_full_name }}
               <span style="color: lightgrey;">
               {% if conexao.gestor_responsavel %}
-                [gestor responsavel]
+                [gestor responsável]
               {% endif %}
               {% if conexao.mentor_tecnico %}
                 [mentoria técnica]
