--- a/administracao/templates/administracao/exportar.html
+++ b/administracao/templates/administracao/exportar.html
@@ -7,6 +7,7 @@
 
 {% block content %}
 
+  {% if modo == "relatorios" %}
     <span class="titulo">Exportar Relatórios</span>
     <table>
         <tr>
@@ -35,8 +36,9 @@
     {% endif %}
     <br>
     <br>
-    <br>
+  {% endif %}
 
+  {% if modo == "dados" %}
     <span class="titulo">Exportar dados</span>
     <table>
         <tr>
@@ -113,5 +115,6 @@
     {% endif %}
     <br>
     <br>
+  {% endif %}
 
 {% endblock %}
