--- a/administracao/templates/administracao/index_admin.html
+++ b/administracao/templates/administracao/index_admin.html
@@ -9,8 +9,8 @@
 
     Data: {% now "j F Y H:i" %}
     <hr>
-    <a href="{% url 'servico' %}"><h5>Habilitar aviso se manutenção</h5></a>
-    <a href="{% url 'configurar' %}"><h5>Configurar</h5></a>
+    <a href="{% url 'servico' %}"><h5>Habilitar Aviso de Manutenção</h5></a>
+    <a href="{% url 'configurar' %}"><h5>Configurar Sistema</h5></a>
 
     <hr>
     <a href="{% url 'cadastrar_organizacao' %}"><h5>Cadastrar Organização</h5></a>
@@ -19,12 +19,15 @@
 
     <hr>
     <a href="{% url 'contas_senhas' %}"><h5>Envia Contas e Senhas</h5></a>
-    <a href="{% url 'nomes' %}"><h5>Ajustar Maiúsculas e Minúsculas de Nomes</h5></a>
+    <a href="{% url 'nomes' %}"><h5>Ajustar Maiúsculas e Minúsculas de Nomes de Usuários</h5></a>
 
     <hr>
-    <a href="{% url 'exportar' %}"><h5>Relatórios/Exportar dados</h5></a>
-    <a href="{% url 'index_carregar' %}"><h5>Carregar dados</h5></a>
+    <a href="{% url 'index_carregar' %}"><h5>Carregar Dados</h5></a>
+    <a href="{% url 'exportar' 'dados' %}"><h5>Exportar Dados</h5></a>
+    <a href="{% url 'exportar' 'relatorios' %}"><h5>Exportar Relatórios</h5></a>
+
+    <hr>
     <a href="{% url 'conexoes_estabelecidas' %}"><h5>Usuários Conectados</h5></a>
-    <a href="{% url 'logs' %}"><h5>Logs Conectados</h5></a>
+    <a href="{% url 'logs' %}"><h5>Logs de Sistema</h5></a>
 
 {% endblock %}
