--- a/organizacoes/templates/organizacoes/seleciona_conexoes.html
+++ b/organizacoes/templates/organizacoes/seleciona_conexoes.html
@@ -28,13 +28,13 @@
       <div class="table-responsive">
       <table id="ParceirosTable" class="table table-bordered table-hover table-sm">
         <caption style="text-align:right">
-          <small>GR: Gestor Responsável / MT: Mentoria Técnica / RH: Recursos Humanos</small>
+          <small>GR: Gestor Responsável / MT: Mentoria Técnica / AA: Área Administrativa</small>
         </caption>
         <thead class="table">
           <tr>
             <th scope="col" class="text-center">GR</th>
             <th scope="col" class="text-center">MT</th>
-            <th scope="col" class="text-center">RH</th>
+            <th scope="col" class="text-center">AA</th>
             <th scope="col" class="text-center">Nome</th>
             <th scope="col" class="text-center">Cargo</th>
             <th scope="col" class="text-center">e-mail</th>
