--- a/professores/templates/professores/banca_ver.html
+++ b/professores/templates/professores/banca_ver.html
@@ -35,6 +35,7 @@
       {% else %}
         {{banca.projeto.titulo}}</a>
       {% endif %}
+      {% include "tipo_projeto.html" with projeto=banca.projeto %}
   {% endif %}
   <br>
   {% if banca.projeto.organizacao %}
