--- a/projetos/templates/projetos/projeto_completo.html
+++ b/projetos/templates/projetos/projeto_completo.html
@@ -69,38 +69,8 @@
   {% endif %}
   <strong>Semestre:</strong> {{projeto.ano}}.{{projeto.semestre}}<br>
 
-  {% if projeto.avancado or projeto.proposta.internacional %}
-    <p><strong>Tipo</strong>:
+  {% include "tipo_projeto.html" with com_tipo=True %}
 
-      {% if projeto.avancado %}
-        <font color="red">PFE Avançado</font>
-      {% endif %}
-
-      {% if projeto.avancado and projeto.proposta.internacional %}
-      /
-      {% endif %}
-
-      {% if projeto.proposta.internacional %}
-        <font color="red">Internacional</font>
-      {% endif %}
-
-      {% if projeto.avancado or projeto.proposta.internacional %}
-        {% if projeto.proposta.intercambio %}
-          /
-        {% endif %}
-      {% endif %}
-      
-      {% if projeto.proposta.intercambio %}
-        <font color="red">Intercâmbio</font>
-      {% endif %}
-
-      {% if projeto.time_misto %}
-        <font color="red">Time Misto</font>
-      {% endif %}
-
-    </p>
-  {% endif %}
-  
   <div class="descricao" style="margin-top: 8px;">
     <strong>Descrição:</strong>
     {% if projeto.descricao %}
