--- a/documentos/templates/documentos/tabela_documentos.html
+++ b/documentos/templates/documentos/tabela_documentos.html
@@ -103,20 +103,7 @@
                   {% else %}
                     {{projeto.titulo}}
                   {% endif %}
-                  <u><strong style="color:red">
-                    {% if projeto.avancado %}
-                      [Avançado]
-                    {% endif %}
-                    {% if projeto.proposta.internacional %}
-                      [Internacional]
-                    {% endif %}
-                    {% if projeto.proposta.intercambio %}
-                      [Intercâmbio]
-                    {% endif %}
-                    {% if projeto.time_misto %}
-                      [Time Misto]
-                    {% endif %}
-                    </strong></u>
+                  {% include "tipo_projeto.html" %}
                 </a>
               </td>
               
