--- a/organizacoes/templates/organizacoes/organizacao_completo.html
+++ b/organizacoes/templates/organizacoes/organizacao_completo.html
@@ -214,20 +214,7 @@
         <a href="{% url 'projeto_completo' projeto.id %}">
           <li>
             {{projeto.get_titulo}} ({{projeto.ano}}.{{projeto.semestre}})
-            <u><strong style="color:red">
-              {% if projeto.avancado %}
-                [Avançado]
-              {% endif %}
-              {% if projeto.proposta.internacional %}
-                [Internacional]
-              {% endif %}
-              {% if projeto.proposta.intercambio %}
-                [Intercâmbio]
-              {% endif %}
-              {% if projeto.time_misto %}
-                [Time Misto]
-              {% endif %}
-            </strong></u><br>
+            {% include "tipo_projeto.html" %}<br>
           </li>
         </a>
       {% endif %}
