--- a/professores/templates/professores/relatos_quinzenais.html
+++ b/professores/templates/professores/relatos_quinzenais.html
@@ -38,37 +38,8 @@
         {% endif %}
       <br>
       {% endif %}
-      {% if projeto.avancado or projeto.proposta.internacional or projeto.proposta.intercambio %}
-        <p><strong>Tipo</strong>:
-
-          {% if projeto.avancado %}
-            <font color="red">PFE Avançado</font>
-          {% endif %}
-
-          {% if projeto.avancado and projeto.proposta.internacional %}
-            /
-          {% endif %}
-
-          {% if projeto.proposta.internacional %}
-            <font color="red">Internacional</font>
-          {% endif %}
-
-          {% if projeto.avancado or projeto.proposta.internacional %}
-            {% if projeto.proposta.intercambio %}
-              /
-            {% endif %}
-          {% endif %}
-
-          {% if projeto.proposta.intercambio %}
-            <font color="red">Intercâmbio</font>
-          {% endif %}
-
-          {% if projeto.time_misto %}
-            <font color="red">Time Misto</font>
-          {% endif %}
-          
-        </p>
-      {% endif %}
+ 
+      {% include "tipo_projeto.html" with com_tipo=True %}<br>
 
       <strong>Organização:</strong>
       {% if projeto.organizacao %}
