--- a/professores/templates/professores/resultado_projetos.html
+++ b/professores/templates/professores/resultado_projetos.html
@@ -108,35 +108,8 @@
           <td>
             <a class="imprimir" href="{% url 'projeto_completo' projeto.id %}">
               {{projeto.get_titulo}}
+              {% include "tipo_projeto.html" %}<br>
             </a>
-
-            {% if projeto.avancado %}
-              <font color="red">PFE Avançado</font>
-            {% endif %}
-    
-            {% if projeto.avancado and projeto.proposta.internacional %}
-            /
-            {% endif %}
-    
-            {% if projeto.proposta.internacional %}
-              <font color="red">Internacional</font>
-            {% endif %}
-
-            {% if projeto.avancado or projeto.proposta.internacional %}
-              {% if projeto.proposta.intercambio %}
-                /
-              {% endif %}
-            {% endif %}
-            
-            {% if projeto.proposta.intercambio %}
-              <font color="red">Intercâmbio</font>
-            {% endif %}
-
-            {% if projeto.time_misto %}
-              <font color="red">Time Misto</font>
-            {% endif %}
-
-            <br>
 
             <ul class="grupo" style="margin-bottom: 6px;">
               {% for alocacao in projeto.alocacao_set.all %}
