--- a/projetos/templates/projetos/filtra_projetos.html
+++ b/projetos/templates/projetos/filtra_projetos.html
@@ -53,17 +53,7 @@
                   {% else %}
                     {{projeto.titulo}}
                   {% endif %}
-                  <u><strong style="color:red">
-                    {% if projeto.avancado %}
-                      [Avançado]
-                    {% endif %}
-                    {% if projeto.proposta.internacional %}
-                      [Internacional]
-                    {% endif %}
-                    {% if projeto.proposta.intercambio %}
-                      [Intercâmbio]
-                    {% endif %}
-                  </strong></u><br>
+                  {% include "tipo_projeto.html" %}
                 </a>
               </th>
               <td>
